# tix

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
examples/: err_sample_ke.txt  sample_ko.txt
relay/: cli.py  config.py  github.py  history.py  linear.py  main.py  parser.py  projects.py
relay/static/: index.html
src/: cli.js  config.js  dedup.js  github.js  google.js  history.js  linear.js  parser.js  projects.js  server.js
static/: index.html
tix/: SKILL.md
